--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "react-mobx-boiler-plate",
+  "name": "react-mobx-boilerplate",
   "version": "0.1.0",
+  "author": {
+    "name": "Minh Trung Nguyen",
+    "email": "tuxdomatna@gmail.com"
+  },
   "private": true,
   "dependencies": {
+    "http-proxy-middleware": "^0.19.0",
+    "mobx": "^5.5.0",
+    "mobx-react": "^5.2.8",
+    "node-sass": "^4.9.4",
+    "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +32,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "customize-cra": "^0.1.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "react-app-rewired": "^1.6.2"
+  }
 }
