--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "react-mobx-boilerplate",
+  "name": "react-mobx-boiler-plate-2",
   "version": "0.1.0",
-  "author": {
-    "name": "Minh Trung Nguyen",
-    "email": "tuxdomatna@gmail.com"
-  },
   "private": true,
   "dependencies": {
-    "http-proxy-middleware": "^0.19.0",
-    "mobx": "^5.5.0",
-    "mobx-react": "^6.1.1",
-    "node-sass": "^4.9.4",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "cra-template": "1.0.3",
+    "customize-cra": "^1.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -26,19 +23,24 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.1.2",
-    "customize-cra": "^0.2.14",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "react-app-rewired": "^2.1.3"
+    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "react-app-rewired": "^2.1.6"
   }
 }
